# paper-hound

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  subscriptions.db  template.env
docs/: API.md  SETUP.md  index.md  installation.md  usage.md
prompts/: classifier.txt  summarizer.txt
scripts/: call_workflow_endpoint.py  call_workflow_endpoint.sh  run_api_test.sh  run_ml_service.sh  start_docker.sh
src/: __init__.py  app.py  cli.py  embedder.py  settings.py  vector_storage.py
src/ai_researcher/: __init__.py  base_bucket.py  classifier.py  gemini_researcher.py  google_bucket.py
src/callers/: __init__.py  call_workflow_endpoint.py
src/containers/: __init__.py  containers.py
src/handlers/: __init__.py  exception_handlers.py
src/logger/: __init__.py  log.py
src/metrics/: __init__.py  asgi_metrics.py  default_buckets.py
src/middleware/: metrics.py  process_time.py
src/notion_db/: add_content_to_page.py  s3_loader.py  utils.py
src/routes/: __init__.py  ai_endpoint.py  health_endpoints.py  processor_endpoints.py  routers.py  workflow_endpoints.py
src/service/: __init__.py  arxiv_fetcher.py  embedder.py  processor.py  stats_chart.py  vector_storage.py  workflow.py
src/service/ai_researcher/: base_bucket.py  classifier.py  gemini_client.py  gemini_researcher.py  google_bucket.py  summarizer.py
src/service/arxiv/: __init__.py  arxiv_fetcher.py  arxiv_utils.py
src/service/notion_db/: __init__.py  add_content_to_page.py  extract_page_content.py  s3_loader.py  utils.py
src/service/vector_db/: __init__.py  embedder.py  processing_cache.py  vector_storage.py
src/utils/: extract_images.py  images_utils.py  load_utils.py  price_caculation.py  schemas.py
telegram_bot/: __init__.py  bot.py  context.py  formatters.py  handlers.py  keyboards.py  notifications.py  subscriptions.py
telegram_bot/handlers/: __init__.py  callback_handlers.py  defaults.py  handlers_utils.py  help_texts.py  main_handlers.py  schemas.py  storage_handlers.py  subscription_handlers.py  welcome_handlers.py
tests/: __init__.py  conftest.py  test_add_content_to_page.py  test_ai_endpoint_api.py  test_ai_endpoint_unit.py  test_arxiv_ph.py  test_concurrency_fix.py  test_handlers_utils.py  test_images_utils.py  test_workflow_endpoints.py
